--- a/src/components/CategoryList/CategoryList.module.css
+++ b/src/components/CategoryList/CategoryList.module.css
@@ -20,7 +20,7 @@
   left: 16px;
   display: flex;
   align-items: center;
-  gap: 8px;
+  gap: 4px;
 }
 
 .categoriesLoader {
@@ -29,7 +29,6 @@
   align-items: center;
   height: 40vh;
 }
-
 
 .nameWrapper {
   border: 1px solid var(--white);
